modify statusCdoe / update swagger document
