# swagger-output.json
@@ -2,11 +2,11 @@
   "swagger": "2.0",
   "info": {
     "title": "ToDoList API ",
-    "description": "後端API文件"
+    "description": "後端API文件",
+    "version": "1.0.0"
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "tags": [],
   "schemes": [
     "http",
     "https"
@@ -19,75 +19,7 @@
       "description": "請加上api key"
     }
   },
-  "consumes": [],
-  "produces": [],
   "paths": {
-    "/todos/": {
-      "post": {
-        "tags": [
-          "Todos - 待辦清單"
-        ],
-        "summary": "新增Todo",
-        "description": "新增代辦事項",
-        "parameters": [],
-        "responses": {}
-      },
-      "get": {
-        "tags": [
-          "Todos - 待辦清單"
-        ],
-        "summary": "取得Todo",
-        "description": "取得代辦事項",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/todos/{id}": {
-      "delete": {
-        "tags": [
-          "Todos - 待辦清單"
-        ],
-        "summary": "刪除Todo",
-        "description": "刪除代辦事項",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/todos/{id}/toggle": {
-      "patch": {
-        "tags": [
-          "Todos - 待辦清單"
-        ],
-        "summary": "更新Todo狀態",
-        "description": "更新代辦事項狀態",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/users/sign_up": {
       "post": {
         "tags": [
@@ -99,7 +31,7 @@
           {
             "name": "body",
             "in": "body",
-            "description": "註冊資訊",
+            "description": "註冊所需欄位",
             "required": true,
             "schema": {
               "type": "object",
@@ -127,11 +59,161 @@
                 "password",
                 "confirmPassword"
               ]
-            },
-            "type": "string"
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "201": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "string",
+                      "example": "token"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "王小明"
+                    }
+                  }
+                },
+                "Issued_At": {
+                  "type": "string",
+                  "example": "2024/12/2 下午11:46:41"
+                },
+                "Expires_At": {
+                  "type": "string",
+                  "example": "2024/12/4 下午11:46:41"
+                },
+                "Expires_Day": {
+                  "type": "number",
+                  "example": 2
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Created"
+          },
+          "402": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "欄位未填寫正確！"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 402
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Payment Required"
+          },
+          "409": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "信箱已註冊過~"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 409
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Conflict"
+          },
+          "422": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "array"
+                    },
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "examples": {
+                          "type": "array",
+                          "example": [
+                            "暱稱不能少於兩個字元",
+                            "密碼需包含至少一個字母和一個數字,並且至少6個字符長",
+                            "密碼不一致！",
+                            "Email 格式不正確"
+                          ],
+                          "items": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 422
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Unprocessable Entity"
+          }
+        }
       }
     },
     "/users/sign_in": {
@@ -140,12 +222,12 @@
           "Users -使用者"
         ],
         "summary": "登入會員",
-        "description": "登入會員資料",
+        "description": "登入資訊",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "description": "登入資訊",
+            "description": "登入所需欄位",
             "required": true,
             "schema": {
               "type": "object",
@@ -163,8 +245,7 @@
                 "email",
                 "password"
               ]
-            },
-            "type": "string"
+            }
           }
         ],
         "responses": {
@@ -212,13 +293,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "status": {
-                  "type": "boolean",
-                  "example": false
-                },
                 "message": {
                   "type": "string",
-                  "example": "你尚未登入"
+                  "example": "帳號或密碼輸入錯誤"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 401
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
                 }
               },
               "xml": {
@@ -226,6 +316,34 @@
               }
             },
             "description": "Unauthorized"
+          },
+          "402": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "帳號密碼不可為空"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 402
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Payment Required"
           }
         }
       }
@@ -237,8 +355,18 @@
         ],
         "summary": "檢查 Token",
         "description": "檢查 Token 是否有效",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/users/sign_out": {
@@ -248,10 +376,118 @@
         ],
         "summary": "登出會員",
         "description": "刪除代辦事項",
-        "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/todos/": {
+      "post": {
+        "tags": [
+          "Todos - 待辦清單"
+        ],
+        "summary": "新增Todo",
+        "description": "新增代辦事項",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "todos": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Todos - 待辦清單"
+        ],
+        "summary": "取得Todo",
+        "description": "取得代辦事項",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/todos/{id}": {
+      "delete": {
+        "tags": [
+          "Todos - 待辦清單"
+        ],
+        "summary": "刪除Todo",
+        "description": "刪除代辦事項",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/todos/{id}/toggle": {
+      "patch": {
+        "tags": [
+          "Todos - 待辦清單"
+        ],
+        "summary": "更新Todo狀態",
+        "description": "更新代辦事項狀態",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
       }
     }
-  },
-  "definitions": {}
+  }
 }
